--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
 		"stylelint:fix": "stylelint src --fix"
 	},
 	"dependencies": {
+		"@nextcloud/auth": "^1.3.0",
 		"@nextcloud/axios": "^1.6.0",
 		"@nextcloud/dialogs": "^3.1.1",
 		"@nextcloud/initial-state": "^1.2.0",
+		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^3.9.0",
 		"debounce": "^1.2.1",
-		"vue": "^2.6.12"
+		"vue": "^2.6.12",
+		"vue-material-design-icons": "^4.11.0",
+		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
