--- a/package.json
+++ b/package.json
@@ -26,24 +26,32 @@
 		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.13.16",
 		"@babel/eslint-parser": "^7.13.14",
-		"@nextcloud/babel-config": "^1.0.0-beta.0",
-		"@nextcloud/browserslist-config": "^1.0.0",
+		"@babel/plugin-proposal-class-properties": "^7.13.0",
+		"@babel/plugin-transform-modules-commonjs": "^7.13.8",
+		"@babel/plugin-transform-shorthand-properties": "^7.12.13",
+		"@babel/preset-env": "^7.13.15",
+		"@nextcloud/babel-config": "^1.0.0-beta.1",
+		"@nextcloud/browserslist-config": "^2.1.0",
 		"@nextcloud/eslint-config": "^5.0.0",
 		"@nextcloud/eslint-plugin": "^2.0.0",
-		"@nextcloud/webpack-vue-config": "^4.0.1",
+		"@nextcloud/webpack-vue-config": "^4.0.3",
+		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^4.3.0",
-		"eslint": "^7.23.0",
+		"eslint": "^7.25.0",
 		"eslint-config-standard": "^16.0.2",
+		"eslint-import-resolver-webpack": "^0.13.0",
+		"eslint-loader": "^4.0.2",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-standard": "^4.1.0",
-		"eslint-plugin-vue": "^7.8.0",
-		"eslint-webpack-plugin": "^2.5.3",
+		"eslint-plugin-vue": "^7.9.0",
+		"eslint-webpack-plugin": "^2.5.4",
 		"node-polyfill-webpack-plugin": "^1.1.0",
-		"sass": "^1.32.8",
+		"sass": "^1.32.11",
 		"sass-loader": "^10.1.1",
 		"style-loader": "^2.0.0",
 		"stylelint": "^13.12.0",
@@ -53,7 +61,7 @@
 		"url-loader": "^4.1.1",
 		"vue-loader": "^15.9.6",
 		"vue-template-compiler": "^2.6.12",
-		"webpack": "^5.28.0",
+		"webpack": "^5.35.1",
 		"webpack-cli": "^4.6.0"
 	},
 	"browserslist": [
