--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"debounce": "^1.2.1",
 		"vue": "^2.6.12",
 		"vue-material-design-icons": "^4.11.0",
+		"vue-router": "^3.5.1",
 		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
