--- a/package.json
+++ b/package.json
@@ -12,60 +12,31 @@
 		"stylelint": "stylelint src",
 		"stylelint:fix": "stylelint src --fix"
 	},
+	"engines": {
+		"node": ">=14.0.0"
+	},
+	"browserslist": [
+		"extends @nextcloud/browserslist-config"
+	],
 	"dependencies": {
 		"@nextcloud/auth": "^1.3.0",
 		"@nextcloud/axios": "^1.6.0",
-		"@nextcloud/dialogs": "^3.1.1",
+		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/initial-state": "^1.2.0",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^3.9.0",
+		"@nextcloud/vue": "^3.10.1",
 		"debounce": "^1.2.1",
-		"vue": "^2.6.12",
+		"vue": "^2.6.14",
 		"vue-material-design-icons": "^4.11.0",
 		"vue-router": "^3.5.1",
 		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.16",
-		"@babel/eslint-parser": "^7.13.14",
-		"@babel/plugin-proposal-class-properties": "^7.13.0",
-		"@babel/plugin-transform-modules-commonjs": "^7.13.8",
-		"@babel/plugin-transform-shorthand-properties": "^7.12.13",
-		"@babel/preset-env": "^7.13.15",
 		"@nextcloud/babel-config": "^1.0.0-beta.1",
 		"@nextcloud/browserslist-config": "^2.1.0",
-		"@nextcloud/eslint-config": "^5.0.0",
-		"@nextcloud/eslint-plugin": "^2.0.0",
-		"@nextcloud/webpack-vue-config": "^4.0.3",
-		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.2.2",
-		"css-loader": "^4.3.0",
-		"eslint": "^7.25.0",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-import-resolver-webpack": "^0.13.0",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-standard": "^4.1.0",
-		"eslint-plugin-vue": "^7.9.0",
-		"eslint-webpack-plugin": "^2.5.4",
-		"node-polyfill-webpack-plugin": "^1.1.0",
-		"sass": "^1.32.11",
-		"sass-loader": "^10.1.1",
-		"style-loader": "^2.0.0",
-		"stylelint": "^13.12.0",
-		"stylelint-config-recommended-scss": "^4.2.0",
-		"stylelint-scss": "^3.19.0",
-		"stylelint-webpack-plugin": "^2.1.1",
-		"url-loader": "^4.1.1",
-		"vue-loader": "^15.9.6",
-		"vue-template-compiler": "^2.6.12",
-		"webpack": "^5.35.1",
-		"webpack-cli": "^4.6.0"
-	},
-	"browserslist": [
-		"extends @nextcloud/browserslist-config"
-	]
+		"@nextcloud/eslint-config": "^5.1.0",
+		"@nextcloud/stylelint-config": "^1.0.0-beta.0",
+		"@nextcloud/webpack-vue-config": "^4.0.3"
+	}
 }
