--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         php-versions: ['7.4']
         databases: ['sqlite']
-        server-versions: ['master']
+        server-versions: ['stable22']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -76,7 +76,7 @@ jobs:
       matrix:
         php-versions: ['7.3', '7.4']
         databases: ['mysql']
-        server-versions: ['master']
+        server-versions: ['stable22']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -142,7 +142,7 @@ jobs:
       matrix:
         php-versions: ['7.4']
         databases: ['pgsql']
-        server-versions: ['master']
+        server-versions: ['stable22']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
