--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/initial-state": "^1.2.0",
 		"@nextcloud/l10n": "^1.4.1",
+		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^3.10.1",
 		"debounce": "^1.2.1",
