--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,17 @@
 	"autoload-dev": {
 		"psr-4": {
 			"OCP\\": "vendor/christophwurst/nextcloud/OCP",
-			"OCA\\Notifications\\": "lib/"
+			"OCA\\LifeLine\\": "lib/"
 		}
 	},
 	"name": "nextcloud/notifications",
 	"description": "notifications",
 	"license": "AGPL",
-	"require": {
-	},
-	"require-dev": {
-		"phpunit/phpunit": "^9.5",
-		"nextcloud/coding-standard": "^0.5.0",
-		"christophwurst/nextcloud": "dev-master@dev",
-		"vimeo/psalm": "^4.3.2"
-	},
 	"config": {
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
 		"platform": {
-			"php": "7.3"
+			"php": "7.4"
 		}
 	},
 	"scripts": {
@@ -31,5 +23,11 @@
 		"psalm:update-baseline": "psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
 		"psalm:clear": "psalm --clear-cache && psalm --clear-global-cache",
 		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^9.5",
+		"nextcloud/coding-standard": "^1.0.0",
+		"vimeo/psalm": "^4.22",
+		"christophwurst/nextcloud": "dev-master"
 	}
 }
