--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         php-versions: ['7.4']
         databases: ['sqlite']
-        server-versions: ['stable22']
+        server-versions: ['master']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -74,9 +74,9 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4']
+        php-versions: ['7.4', '8.0', '8.1']
         databases: ['mysql']
-        server-versions: ['stable22']
+        server-versions: ['master']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -142,7 +142,7 @@ jobs:
       matrix:
         php-versions: ['7.4']
         databases: ['pgsql']
-        server-versions: ['stable22']
+        server-versions: ['master']
 
     name: integration-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
