--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,26 +1,37 @@
 name: Static analysis
 
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+      - main
+      - stable*
 
 jobs:
   static-psalm-analysis:
-      runs-on: ubuntu-latest
-      strategy:
-          matrix:
-              ocp-version: [ 'dev-master' ]
-      name: Nextcloud ${{ matrix.ocp-version }}
-      steps:
-          - name: Checkout
-            uses: actions/checkout@master
-          - name: Set up php
-            uses: shivammathur/setup-php@master
-            with:
-                php-version: 7.4
-                tools: composer:v1
-                coverage: none
-          - name: Install dependencies
-            run: composer i
-          - name: Install dependencies
-            run: composer require --dev christophwurst/nextcloud:${{ matrix.ocp-version }}
-          - name: Run coding standards check
-            run: composer run psalm
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        ocp-version: [ 'dev-master', 'dev-stable24', 'dev-stable23', 'dev-stable22' ]
+
+    name: Nextcloud ${{ matrix.ocp-version }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Set up php
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+          coverage: none
+
+      - name: Install dependencies
+        run: composer i
+
+      - name: Install dependencies
+        run: composer require --dev christophwurst/nextcloud:${{ matrix.ocp-version }}
+
+      - name: Run coding standards check
+        run: composer run psalm
